# ComPath

./: .gitattributes  .gitconfig  .gitignore  Pipfile  Pipfile.bk  Pipfile.lock.bk  README.md  pyproject.toml  setup.py
compath/: __init__.py  core.py  geom.py  magnif.py  mask.py  misc.py  stain.py  tissue.py  tvec.py  utils.py
compath/annot/: __init__.py  asap.py  napari_csv.py
compath/segm/: unet.py  unet_train.ipynb
tiax/: __init__.py  __main__.py
tiax/annot/: __init__.py
tiax/cli/: __init__.py  tissue_mask.py
tiax/tools/: __init__.py  stainextract.py  tissuemask.py
tiax/utils/: __init__.py  mask.py  misc.py
tools/: nuclei_detection.py  tissue_region.py  wsi2zarr.py  zarr2tiff.py
